--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-
+<div style="margin: 30px">
   <mat-form-field class="example-full-width" appearance="fill">
     <mat-label>Email</mat-label>
     <input [(ngModel)]="email" matInput>
@@ -9,6 +9,8 @@
     <input [(ngModel)]="password" matInput type="password">
 
   </mat-form-field>
-<br>
-<button mat-flat-button (click)="http.login({email: email, password: password})">Log in</button>
-  <button mat-flat-button (click)="http.register({role: 'Admin', email: email, password: password})">Register</button>
+  <br>
+  <button mat-flat-button color="primary" (click)="http.login({email: email, password: password})">Log in</button>
+  <button mat-flat-button color="accent" (click)="http.register({role: 'Admin', email: email, password: password})">Register</button>
+
+</div>
