--- a/frontend/src/app/product/product.component.html
+++ b/frontend/src/app/product/product.component.html
@@ -1,29 +1,36 @@
-<div style="margin: 100px;">
+<div style="margin: 30px;">
   <mat-form-field>
     <input matInput placeholder="Product name" [(ngModel)]="productName">
   </mat-form-field>
   <br>
 
-  <mat-form-field>
+  <!--<mat-form-field>
     <input type="number" matInput [(ngModel)]="productPrice" >
+  </mat-form-field>-->
+  <mat-form-field appearance="fill">
+    <mat-label>Product price</mat-label>
+    <mat-select [(ngModel)]="productPrice">
+      <mat-option *ngFor="let i of [1,2,3,4]" [value]="i">
+        {{i}}
+      </mat-option>
+    </mat-select>
   </mat-form-field>
   <br>
   <button [disabled]="productName=='' || productPrice<1" mat-raised-button
           (click)="http.createProduct({name: productName,price: productPrice})">Add product</button>
 
   <mat-card style="margin-top: 30px;" *ngFor="let p of http.products" (click)="toggleExpand(p)">
-    <span><mat-card-title style="display: inline;">{{p.name}}</mat-card-title>
+   <mat-card-title style="display: inline;">{{p.name}}</mat-card-title>
     <mat-icon style="display: inline; float: right;" *ngIf="p.expanded!=true">keyboard_arrow_down</mat-icon>
-    <mat-icon style="display: inline; float: right;" *ngIf="p.expanded==true">keyboard_arrow_up</mat-icon></span>
-
+    <mat-icon style="display: inline; float: right;" *ngIf="p.expanded==true">keyboard_arrow_up</mat-icon>
     <div *ngIf="p.expanded==true">
       <mat-card-subtitle>{{p.price}},-</mat-card-subtitle>
       <mat-card-subtitle>product number: {{p.id}}</mat-card-subtitle>
       <mat-card-actions>
-        <button mat-button (click)="http.deleteProduct(p.id)">Delete</button>
+        <button mat-raised-button color="warn" (click)="http.deleteProduct(p.id)">Delete</button>
       </mat-card-actions>
     </div>
-
   </mat-card>
+
 </div>
 
