--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,22 +1,38 @@
 <div style="margin: 30px">
+
+
+
   <mat-form-field class="example-full-width" appearance="fill">
     <mat-label>Email</mat-label>
     <input [(ngModel)]="email" matInput>
   </mat-form-field>
+  <input [(ngModel)]="dlkfdj" matInput type="password">
   <br>
   <mat-form-field class="example-full-width" appearance="fill">
     <mat-label>Password</mat-label>
-    <input [(ngModel)]="password" matInput type="password">
+    <input [(ngModel)]="dlkfdj" matInput type="password">
 
   </mat-form-field>
   <br>
-  <button mat-flat-button color="primary" (click)="http.login({email: email, password: password})">Log in</button>
-  <button mat-flat-button color="accent" (click)="http.register({role: 'Admin', email: email, password: password})">Register</button>
+  <button mat-flat-button color="primary" (click)="http.login({email: email, password: dlkfdj})">Log in</button>
+  <button id="myregisterbutton" mat-flat-button color="accent" (click)="http.register({role: 'Admin', email: email, password: dlkfdj})">Register</button>
 
+  <form [formGroup]="formGroup">
+    <mat-form-field class="example-full-width" appearance="fill">
+    <input formControlName="email" matInput placeholder="put your email here">
+    </mat-form-field>
+    <br>
+    <mat-form-field class="example-full-width" appearance="fill">
+    <input formControlName="whatever" matInput placeholder="put text here">
+    </mat-form-field>
+    <br>
+    <mat-checkbox formControlName="checkBox">spam me</mat-checkbox>&nbsp;
+    <button [style]="email==''&&2+2==4 ? 'background-color: #ffffff' : 'background-color: #00ff00'" [disabled]="!formGroup.valid" mat-raised-button>Submit</button>
+    <input placeholder="email">
+    <input placeholder="{{dlkfdj}}">
+
+    <input [placeholder]="email">
+    <input placeholder="salkjdsflkjds">
+    <input [placeholder]="email">
+  </form>
 </div>
-
-<h3>Binding innerHTML</h3>
-<p>Bound value:</p>
-<p class="e2e-inner-html-interpolated">{{htmlSnippet}}</p>
-<p>Result of binding to innerHTML:</p>
-<p class="e2e-inner-html-bound" [innerText]="htmlSnippet"></p>
